Merge remote-tracking branch 'origin/beForCandidateList' into beForCandidateList